Carrito de compras

--- a/WS/src/app/components/servicioss/servicioss.component.html
+++ b/WS/src/app/components/servicioss/servicioss.component.html
@@ -1,10 +1,20 @@
 <h1>Servicios: <small>Hoteles y demás.</small></h1>
 <hr>
 
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+        <app-shoppingcart></app-shoppingcart>
+    </div>
+  </div>
 
-<div class="card-columns">
-
-  <app-servicio-tarjeta (heroeSeleccionado)="verServicio( $event )" [servicio]="foo" [index]="i"  *ngFor="let foo of servicios; let i = index"></app-servicio-tarjeta>
-
-
+  <div class="row">
+    <div class="col-md-12">
+        <div class="card-columns">
+            <app-servicio-tarjeta (heroeSeleccionado)="verServicio( $event )" [servicio]="foo" [index]="i"  *ngFor="let foo of servicios; let i = index"></app-servicio-tarjeta>
+        </div>
+    </div>
+  </div>
 </div>
+
+
