--- a/WS/src/app/components/servicio-tarjeta/servicio-tarjeta.component.css
+++ b/WS/src/app/components/servicio-tarjeta/servicio-tarjeta.component.css
@@ -2,3 +2,9 @@ img {
     height: 255px;
     width: 355px;
 }
+.card-body{
+    justify-content: space-between;
+}
+button{
+    margin-right: 15px;
+}
