--- a/WS/src/app/components/servicio/servicio.component.html
+++ b/WS/src/app/components/servicio/servicio.component.html
@@ -15,12 +15,9 @@
     <h3>{{ servicio.nombre }}</h3>
     <hr>
     <p>
-      {{ servicio.bio }}
+      {{ servicio.descripcion }}
     </p>
-    <div>
-      <!---- <img *ngIf="heroe.casa == 'Marvel'" class="img-logo" src="assets/img/marvel-logo.png" alt="DC">
-     <img *ngIf="heroe.casa == 'DC'" class="img-logo" src="assets/img/dc-logo.jpg" alt="Marvel">-->
-    </div>
+
 
 
   </div>
