--- a/WS/src/app/components/servicio-tarjeta/servicio-tarjeta.component.html
+++ b/WS/src/app/components/servicio-tarjeta/servicio-tarjeta.component.html
@@ -2,6 +2,7 @@
   <img class="card-img-top img-fluid" [src]="servicio.img" [alt]="servicio.nombre">
   <div class="card-body">
     <h4 class="card-title">{{ servicio.nombre }}</h4>
+    <p class="card-text">{{servicio.tipo}}</p>
     <p class="card-text"> {{ servicio.descripcion }} </p>
     <p class="card-text"><small class="text-muted">{{ servicio.pais }} - {{ servicio.ciudad }}</small></p>
     <p class="card-text"><small class="text-muted">{{ servicio.costo | number:'.2-2' }} USD </small></p>
