--- a/WS/src/app/components/shoppingcart/cart/cart.component.html
+++ b/WS/src/app/components/shoppingcart/cart/cart.component.html
@@ -1,23 +1,24 @@
 
- <div *ngIf="this.servicios.length===0" >
-    No tienes productos
+ <div class="carritoNo" *ngIf="this.servicios.length===0" >
+    No tienes productos seleccionados
  </div>
-  <div *ngIf="this.servicios.length>0" >
+  <div class="carritoSi" *ngIf="this.servicios.length>0" >
     <table class="table table-striped table-responsive-md btn-table">
       <thead>
-        <tr>
+        <tr >
           <td style="width:20px;">Cantidad</td>
           <td>Producto</td>
           <td>Precio</td>
         </tr>
       </thead>
       <tbody>
-        <tr (click)="quitarServicio(item)" *ngFor="let item of servicios">
-          <td class="has-text-centered">
+        <tr class="has-text-centered" (click)="quitarServicio(item)" *ngFor="let item of servicios">
+          <td>
+              <span class="tooltiptext">Eliminar servicio</span>
             <span>1</span>
           </td>
           <td>{{item.nombre}}</td>
-          <td>{{item.costo}}</td>
+          <td>{{item.costo | number:'.2-2'}} USD</td>
         </tr>
       </tbody>
       <tfoot>
