--- a/WS/src/app/components/servicio/servicio.component.html
+++ b/WS/src/app/components/servicio/servicio.component.html
@@ -25,6 +25,12 @@
   </div>
 </div>
 
+<div>
+
+
+</div>
+
+
   <h1 class="animated fadeIn"> Opiniones y comentarios </h1>
   <hr>
 <div class="row animated fadeIn fast">
