--- a/WS/src/app/components/servicio-tarjeta/servicio-tarjeta.component.html
+++ b/WS/src/app/components/servicio-tarjeta/servicio-tarjeta.component.html
@@ -1,23 +1,23 @@
 <div class="card animated fadeIn fast" >
-  <img class="card-img-top img-fluid" [src]="servicio.img" [alt]="servicio.nombre">
+  <img class="card-img-top img-fluid" [src]="getSantizeUrl(servicio.img)" [alt]="servicio.nombre">
   <div class="card-body">
     <h4 class="card-title">{{ servicio.nombre }}</h4>
     <p class="card-text">{{servicio.tipo}}</p>
     <p class="card-text"> {{ servicio.descripcion }} </p>
     <p class="card-text"><small class="text-muted">{{ servicio.pais }} - {{ servicio.ciudad }}</small></p>
-    <p class="card-text"><small class="text-muted">{{ servicio.costo | number:'.2-2' }} USD </small></p>
+    <p class="card-text"><small class="text-muted">{{ servicio.costo | number:'.2-2' }} COP </small></p>
 
     <button (click)="agregarServicio(servicio)"
       type="button" class="btn btn-outline-primary ">
       <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
       Agregar al carrito
     </button>
-  
+
     <button (click)="verServicio()"
       type="button" class="btn btn-outline-primary ">
       Ver más...
     </button>
-  
+
     <!-- <a [routerLink]="['/servicio',i]" class="btn btn-outline-primary">Ver más link...</a> -->
 
   </div>
