--- a/WS/src/app/components/servicioss/servicioss.component.html
+++ b/WS/src/app/components/servicioss/servicioss.component.html
@@ -11,7 +11,7 @@
             <option value="Otro">Otro</option>
           </select>
     </div>
-    
+
   <div class="row">
     <div class="col-md-12">
         <app-shoppingcart></app-shoppingcart>
@@ -21,7 +21,7 @@
   <div class="row">
     <div class="col-md-12">
         <div class="card-columns">
-            <app-servicio-tarjeta (heroeSeleccionado)="verServicio( $event )" [servicio]="foo" [index]="i"  *ngFor="let foo of serviciosCopia; let i = index"></app-servicio-tarjeta>
+            <app-servicio-tarjeta  [servicio]="foo" [index]="foo.idx"  *ngFor="let foo of serviciosCopia; let i = index"></app-servicio-tarjeta>
         </div>
     </div>
   </div>
