--- a/WS/src/app/components/shared/navbar/navbar.component.html
+++ b/WS/src/app/components/shared/navbar/navbar.component.html
@@ -4,15 +4,13 @@
   </button>
 
   <a class="navbar-brand" href="#">
-    
+
     <img src="assets/img/4clover.png" width="45" height="45" alt="">
   </a>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <div class="collapse navbar-collapse" *ngIf="this.sesion == 'sininiciar'" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-
       <!-- active -->
-      
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['home']">Home</a>
       </li>
@@ -22,15 +20,60 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['about']">About</a>
       </li>
+      <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['login']">Login</a>
+        </li>
     </ul>
-
-
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="text" placeholder="Buscar servicio" (keyup.enter)="buscarServicio(buscarTexto.value)" #buscarTexto>
       <button (click)="buscarServicio(buscarTexto.value)"
           class="btn btn-outline-primary my-2 my-sm-0" type="button">Buscar</button>
     </form>
-
-
   </div>
+
+  <div class="collapse navbar-collapse" *ngIf="this.sesion == 'usuario'" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <!-- active -->
+
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['servicioss']">Servicios</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['about']">About</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" [routerLink]="['profile',this.user]">Perfil</a>
+          </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="text" placeholder="Buscar servicio" (keyup.enter)="buscarServicio(buscarTexto.value)" #buscarTexto>
+        <button (click)="buscarServicio(buscarTexto.value)"
+            class="btn btn-outline-primary my-2 my-sm-0" type="button">Buscar</button>
+      </form>
+    </div>
+
+    <div class="collapse navbar-collapse" *ngIf="this.sesion == 'proveedor'" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <!-- active -->
+
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" [routerLink]="['servicioss']">Servicios</a>
+          </li>
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" [routerLink]="['about']">About</a>
+          </li>
+          <li class="nav-item" routerLinkActive="active">
+              <a class="nav-link" [routerLink]="['crearservicio']">Crear servicio</a>
+            </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Buscar servicio" (keyup.enter)="buscarServicio(buscarTexto.value)" #buscarTexto>
+          <button (click)="buscarServicio(buscarTexto.value)"
+              class="btn btn-outline-primary my-2 my-sm-0" type="button">Buscar</button>
+        </form>
+      </div>
+
+
+
+
 </nav>
