--- a/WS/src/app/components/shared/navbar/navbar.component.html
+++ b/WS/src/app/components/shared/navbar/navbar.component.html
@@ -15,20 +15,17 @@
         <a class="nav-link" [routerLink]="['home']">Home</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['servicioss']">Servicios</a>
+        <a class="nav-link" [routerLink]="['login']">Login</a>
+    </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['register']">Registro</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['about']">About</a>
       </li>
-      <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" [routerLink]="['login']">Login</a>
-        </li>
+
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Buscar servicio" (keyup.enter)="buscarServicio(buscarTexto.value)" #buscarTexto>
-      <button (click)="buscarServicio(buscarTexto.value)"
-          class="btn btn-outline-primary my-2 my-sm-0" type="button">Buscar</button>
-    </form>
+
   </div>
 
   <div class="collapse navbar-collapse" *ngIf="this.sesion == 'usuario'" id="navbarSupportedContent">
@@ -43,6 +40,9 @@
         </li>
         <li class="nav-item" routerLinkActive="active">
             <a class="nav-link" [routerLink]="['profile',this.user]">Perfil</a>
+          </li>
+          <li>
+            <a class="nav-link" (click)="logout()" [routerLink]="['login']">LogOut</a>
           </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
@@ -64,6 +64,9 @@
           </li>
           <li class="nav-item" routerLinkActive="active">
               <a class="nav-link" [routerLink]="['crearservicio']">Crear servicio</a>
+            </li>
+            <li>
+              <a class="nav-link" [routerLink]="['login']" (click)="logout()">LogOut</a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
