--- a/WS/src/app/components/mostrarservicio/servicio-tarjeta/servicio-tarjeta.component.html
+++ b/WS/src/app/components/mostrarservicio/servicio-tarjeta/servicio-tarjeta.component.html
@@ -8,13 +8,13 @@
     <p class="card-text"><small class="text-muted">{{ servicio.costo | number:'.2-2' }} COP </small></p>
 
     <button (click)="agregarServicio(servicio)"
-      type="button" class="btn btn-outline-primary ">
+      type="button" class="btn btn-success ">
       <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
       Agregar al carrito
     </button>
 
     <button (click)="verServicio()"
-      type="button" class="btn btn-outline-primary ">
+      type="button" class="btn btn-dark ">
       Ver más...
     </button>
 
