--- a/WS/src/app/components/profile/profile.component.html
+++ b/WS/src/app/components/profile/profile.component.html
@@ -26,7 +26,7 @@
 
       <div class="row">
         <div class="col">
-            <button type="button" class="btn btn-primary btn-block" (click)="save()">
+            <button type="button" class="btn btn-success btn-block" (click)="save()">
                 Guardar
             </button>
         </div>
