--- a/WS/src/app/components/shared/navbar/navbar.component.html
+++ b/WS/src/app/components/shared/navbar/navbar.component.html
@@ -5,26 +5,24 @@
 
   <a class="navbar-brand" href="#">
 
-    <img src="assets/img/4clover.png" width="45" height="45" alt="">
+    <img id="logoECCO" src="assets/img/logo_ecco.png"  alt="">
   </a>
 
   <div class="collapse navbar-collapse" *ngIf="this.sesion == 'sininiciar'" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <!-- active -->
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['home']">Home</a>
+        <a class="nav-link" [routerLink]="['servicioss']">Servicios</a>
       </li>
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['login']">Login</a>
-    </li>
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['register']">Registro</a>
-      </li>
+
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['about']">About</a>
       </li>
 
     </ul>
+
+    <button class="botonNavBar" type="button" [routerLink]="['login']">Iniciar sesión</button>
+    <button class="botonNavBar" type="button" [routerLink]="['register']">Registrarse</button>
 
   </div>
 
@@ -41,11 +39,9 @@
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" [routerLink]="['about']">About</a>
         </li>
-
-          <li>
-            <a class="nav-link" (click)="logout()" [routerLink]="['login']">LogOut</a>
-          </li>
       </ul>
+      <button class="botonNavBar" type="button" (click)="logout()" [routerLink]="['login']">Cerrar sesión</button>
+
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="text" placeholder="Buscar servicio" (keyup.enter)="buscarServicio(buscarTexto.value)" #buscarTexto>
         <button (click)="buscarServicio(buscarTexto.value)"
@@ -69,12 +65,9 @@
           <li class="nav-item" routerLinkActive="active">
             <a class="nav-link" [routerLink]="['about']">About</a>
           </li>
-
-
-            <li>
-              <a class="nav-link" [routerLink]="['login']" (click)="logout()">LogOut</a>
-            </li>
         </ul>
+
+        <button class="botonNavBar" type="button" (click)="logout()" [routerLink]="['login']">Cerrar sesión</button>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="text" placeholder="Buscar servicio" (keyup.enter)="buscarServicio(buscarTexto.value)" #buscarTexto>
           <button (click)="buscarServicio(buscarTexto.value)"
