--- a/WS/src/app/components/mostrarservicio/servicioss/servicioss.component.html
+++ b/WS/src/app/components/mostrarservicio/servicioss/servicioss.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <h1>Servicios: <small>Hoteles y demás.</small></h1>
-    <div>
+    <h1>Servicios: <small>Alimentación, alojamiento, transporte y demás.</small></h1>
+    <div class="filtrar">
         <h2>Filtrar por: </h2>
         <select (change)="buscarServicio($event.target.value)" name="combo" id="combo" ng-model="listItems" >
             <option value=""> </option>
