--- a/WS/src/app/components/pago/pago.component.html
+++ b/WS/src/app/components/pago/pago.component.html
@@ -1,30 +1,30 @@
 <br>
 <div class="formulario">
   <h2>Pago</h2>
-  <form (ngSubmit)="Pagar()">
+  <form (ngSubmit)="pago()">
     <div class="form-group">
       <label for="numTarjeta">Numero tarjeta</label>
-      <input type="number" required id="numTarjeta" class="form-control"/>
+      <input type="number" required id="numTarjeta" name="numTarjeta" class="form-control" [(ngModel)]="numTarjeta"/>
     </div>
 
     <div class="form-group">
-      <label for="cuotas">Numero de cuotas</label>
-      <input type="number" required id="cuotas" class="form-control" required/>
+      <label for="numCuotas">Numero de cuotas</label>
+      <input type="number" required id="numCuotas" name="cuotas" class="form-control" [(ngModel)]="cuotas"/>
     </div>
 
 
     <div class="form-group">
-      <label for="cvs">CVS</label>
-      <input type="password" id="cvs" class="form-control" required/>
+      <label for="txtCvs">CVS</label>
+      <input type="password" id="txtCvs" name="cvs" class="form-control" required [(ngModel)]="cvs"/>
     </div>
       <!--  -->
     <div class="form-group">
       <label for="fechavencimiento">Fecha de vencimiento</label>
-      <input type="date" formControlName="descripcion" class="form-control"/>
+      <input type="date" id="fechavencimiento" name="fecha" class="form-control" [(ngModel)]="fechavencimiento" required/>
     </div>
 
     <div class="form-group">
       <button class="btn btn-outline-primary mx-auto d-block" type="submit">Pagar</button>
-      </div>
+    </div>
   </form>
 </div>
