--- a/WS/src/app/components/shoppingcart/cart/cart.component.html
+++ b/WS/src/app/components/shoppingcart/cart/cart.component.html
@@ -30,5 +30,8 @@
         </tr>
       </tfoot>
     </table>
+    <div>
+      <button  type="button" class="btn btn-success btn-lg btn-block" (click)="pago()" >Realizar Pago</button>
+    </div>
   </div>
 
