--- a/WS/src/app/components/shared/navbar/navbar.component.html
+++ b/WS/src/app/components/shared/navbar/navbar.component.html
@@ -3,9 +3,8 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <a class="navbar-brand" href="#">
-
-    <img id="logoECCO" src="assets/img/logo_ecco.png"  alt="">
+  <a class="navbar-brand" [routerLink]="['home']">
+    <img id="logoECCO" src="assets/img/logo_ecco.png" [routerLink]="['home']" alt="">
   </a>
 
   <div class="collapse navbar-collapse" *ngIf="this.sesion == 'sininiciar'" id="navbarSupportedContent">
@@ -40,13 +39,15 @@
           <a class="nav-link" [routerLink]="['about']">About</a>
         </li>
       </ul>
-      <button class="botonNavBar" type="button" (click)="logout()"  routerLinkActive="active" [routerLink]="['login']">Cerrar sesión</button>
 
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="text" placeholder="Buscar servicio" (keyup.enter)="buscarServicio(buscarTexto.value)" #buscarTexto>
         <button (click)="buscarServicio(buscarTexto.value)"
-            class="btn btn-outline-primary my-2 my-sm-0" type="button">Buscar</button>
+            class="btn btn-outline-success my-2 my-sm-0" type="button">Buscar</button>
       </form>
+
+      <button class="botonNavBar" type="button" (click)="logout()"  routerLinkActive="active" [routerLink]="['login']">Cerrar sesión</button>
+
     </div>
 
     <div class="collapse navbar-collapse" *ngIf="this.sesion == 'proveedor'" id="navbarSupportedContent">
@@ -67,12 +68,14 @@
           </li>
         </ul>
 
-        <button class="botonNavBar" type="button" (click)="logout()"  routerLinkActive="active" [routerLink]="['login']">Cerrar sesión</button>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="text" placeholder="Buscar servicio" (keyup.enter)="buscarServicio(buscarTexto.value)" #buscarTexto>
           <button (click)="buscarServicio(buscarTexto.value)"
               class="btn btn-outline-success my-2 my-sm-0" type="button">Buscar</button>
         </form>
+
+                <button class="botonNavBar" type="button" (click)="logout()"  routerLinkActive="active" [routerLink]="['login']">Cerrar sesión</button>
+
       </div>
 
 
