--- a/WS/src/app/components/register/register.component.html
+++ b/WS/src/app/components/register/register.component.html
@@ -66,7 +66,7 @@
 
 
       <div class="form-group">
-          <button class="btn btn-outline-primary mx-auto d-block">Registrarme</button>
+          <button class="btn btn-outline-success mx-auto d-block">Registrarme</button>
       </div>
   </form>
 </div>
