--- a/WS/src/app/components/shared/navbar/navbar.component.css
+++ b/WS/src/app/components/shared/navbar/navbar.component.css
@@ -26,7 +26,7 @@
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
-
+margin-left: 35px;
  border-radius: 8px;
  margin-right: 10px;
 }
