--- a/WS/src/app/components/mostrarservicio/servicioss/servicioss.component.html
+++ b/WS/src/app/components/mostrarservicio/servicioss/servicioss.component.html
@@ -1,30 +1,41 @@
-<div class="container">
-    <h1>Servicios: <small>Alimentación, alojamiento, transporte y demás.</small></h1>
-    <div class="filtrar">
-        <h2>Filtrar por: </h2>
-        <select (change)="buscarServicio($event.target.value)" name="combo" id="combo" ng-model="listItems" >
-            <option value=""> </option>
-            <option value="Alojamiento">Alojamiento</option>
-            <option value="Alimentacion">Alimentación</option>
-            <option value="Transporte">Transporte</option>
-            <option value="Paseo">Paseo ecológico</option>
-            <option value="Otro">Otro</option>
-          </select>
-    </div>
-
-  <div class="row">
-    <div class="col-md-12">
-        <app-shoppingcart></app-shoppingcart>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-12">
-        <div class="card-columns">
-            <app-servicio-tarjeta  [servicio]="foo" [index]="foo.idx"  *ngFor="let foo of serviciosCopia; let i = index"></app-servicio-tarjeta>
-        </div>
-    </div>
+<div id="buscador">
+  <img id="logoECCO" src="assets/img/logo_ecco.png" [routerLink]="['home']" alt="">
+  <div id="buscadorForm">
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="Buscar servicio"
+        (keyup.enter)="buscarServicio(buscarTexto.value)" #buscarTexto>
+      <button (click)="buscarServicio(buscarTexto.value)" class="btn btn-outline-success my-2 my-sm-0"
+        type="button">Buscar</button>
+      <div class="filtrar">
+        <label for="combo">Filtrar por:</label>
+        <select (change)="buscarServicio($event.target.value)" name="combo" id="combo" ng-model="listItems">
+          <option value=""> </option>
+          <option value="Alojamiento">Alojamiento</option>
+          <option value="Alimentacion">Alimentación</option>
+          <option value="Transporte">Transporte</option>
+          <option value="Paseo">Paseo ecológico</option>
+          <option value="Otro">Otro</option>
+        </select>
+      </div>
+    </form>
   </div>
 </div>
 
+<div class="container">
 
+
+  <div class="row">
+    <div class="col-md-12">
+      <app-shoppingcart></app-shoppingcart>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="card-columns">
+        <app-servicio-tarjeta [servicio]="foo" [index]="foo.idx" *ngFor="let foo of serviciosCopia; let i = index">
+        </app-servicio-tarjeta>
+      </div>
+    </div>
+  </div>
+</div>
