--- a/WS/src/app/components/shared/navbar/navbar.component.css
+++ b/WS/src/app/components/shared/navbar/navbar.component.css
@@ -10,7 +10,7 @@
 
 
 .nav-item:hover{
- background-color: #518F16 ;
+ background-color: #4CAF50;
  border-radius: 17px 17px 17px 17px;
  -moz-border-radius: 17px 17px 17px 17px;
  -webkit-border-radius: 17px 17px 17px 17px;
@@ -26,7 +26,7 @@
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
-margin-left: 35px;
+ margin-left: 10px;
  border-radius: 8px;
  margin-right: 10px;
 }
