--- a/WS/src/app/components/servicio/servicio.component.html
+++ b/WS/src/app/components/servicio/servicio.component.html
@@ -19,6 +19,10 @@
       Costo:
       {{ servicio.costo | number:'.2-2'}} USD
     </p>
+    <p>
+      Tipo:
+      {{ servicio.tipo }} 
+    </p>
   </div>
 </div>
 
