--- a/WS/src/app/components/crearservicio/crearservicio.component.html
+++ b/WS/src/app/components/crearservicio/crearservicio.component.html
@@ -108,7 +108,7 @@
 
 
       <div class="form-group">
-          <button class="btn btn-outline-primary mx-auto d-block">Crear servicio</button>
+          <button class="btn btn-outline-success mx-auto d-block">Crear servicio</button>
       </div>
   </form>
 </div>
