--- a/WS/src/app/components/profile/profile.component.html
+++ b/WS/src/app/components/profile/profile.component.html
@@ -33,6 +33,17 @@
     </div>
 
 
+    <div *ngIf="this.sesionService.sesion == 'proveedor'">
+        <label for="edad">Página web: </label>
+        <input type="text" class="form-control" id="paginaweb" [(ngModel)]="this.usuarioMostrar.paginaweb">
+
+    </div>
+
+    <div *ngIf="this.sesionService.sesion == 'proveedor'">
+        <label for="edad">Contacto: </label>
+        <input type="text" class="form-control" id="contacto" [(ngModel)]="this.usuarioMostrar.contacto">
+      </div>
+
       <div class="row">
         <div class="col">
             <button type="button" class="btn btn-success btn-block" (click)="save()">
