--- a/WS/src/app/components/profile/profile.component.html
+++ b/WS/src/app/components/profile/profile.component.html
@@ -1,12 +1,20 @@
 <div>
 
+  <div class="imagen">
+      <label for="imagen">Imagen: </label>
+      <br>
+  
+      <img *ngIf="!this.cambio" id="img" [src]="getSantizeUrl()"/>
+  </div>
+    
+
   <div>
     <label for="nombre">Nombre: </label>
-    <input type="text" class="form-control" id="nombre" [(ngModel)]="this.usuarioMostrar.nombre">
+    <input type="text" class="form-control" id="nombre" [(ngModel)]="this.usuarioMostrar.nombre" >
   </div>
   <div>
       <label for="username">Email: </label>
-      <input type="text" class="form-control" id="username" [(ngModel)]="this.usuarioMostrar.email">
+      <input type="text" class="form-control" id="username" [(ngModel)]="this.usuarioMostrar.email" readonly>
 
     </div>
     <div>
@@ -18,19 +26,22 @@
           <label for="telefono">Teléfono:</label>
           <input type="text" class="form-control" id="telefono" [(ngModel)]="this.usuarioMostrar.telefono">
       </div>
-      <label for="imagen">Imagen: </label>
-      <br>
-
-      <img *ngIf="!this.cambio" id="img" [src]="getSantizeUrl()"/>
-
 
       <div>
+          <label for="password">Contraseña:</label>
+          <input type="password" class="form-control" id="password" [(ngModel)]="this.usuarioMostrar.password">
+      </div>
+
+      
+
+
+      <div class="imagen">
         <label class="image-upload-container btn btn-bwm">
             <span>Seleccionar imagen</span>
             <p></p>
             <input type='file' (change)="onSelectFile($event)"  class="form-control" [ngClass]="{ 'is-invalid': submitted && f.foto.errors }">
           </label>
-    </div>
+      </div>
 
 
     <div *ngIf="this.sesionService.sesion == 'proveedor'">
@@ -46,7 +57,7 @@
 
       <div class="row">
         <div class="col">
-            <button type="button" class="btn btn-success btn-block" (click)="save()">
+            <button type="button" class="btn btn-success btn-block" (click)="actualizar()">
                 Guardar
             </button>
         </div>
