Correcciones busquedas y rutas principales

--- a/WS/src/app/components/about/about.component.html
+++ b/WS/src/app/components/about/about.component.html
@@ -2,6 +2,5 @@
 <hr>
 <p class="animated fadeIn">
 
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
+  ECCO es un proyecto basado en servicios web enfocada a la comercialización de planes de Turismo Ecológico, ECCO propone proporcionar un portal Web que permita mediar transacciones de negocio entre proveedores de servicios de turismo ecológico y las personas interesadas en acceder a dichos servicios.
 </p>
