--- a/WS/src/app/components/shared/navbar/navbar.component.html
+++ b/WS/src/app/components/shared/navbar/navbar.component.html
@@ -3,8 +3,8 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <a class="navbar-brand" [routerLink]="['home']">
-    <img id="logoECCO" src="assets/img/logo_ecco.png" [routerLink]="['home']" alt="">
+  <a class="navbar-brand" [routerLink]="['servicioss']">
+    <img id="logoECCO" src="assets/img/logo_ecco.png" [routerLink]="['servicioss']" alt="">
   </a>
 
   <div class="collapse navbar-collapse" *ngIf="this.sesion == 'sininiciar'" id="navbarSupportedContent">
