--- a/WS/src/app/components/profile/profile.component.html
+++ b/WS/src/app/components/profile/profile.component.html
@@ -1,71 +1,71 @@
-<div>
+<div *ngFor="let item of usuarioMostrar">
 
-  <div class="imagen">
-      <label for="imagen">Imagen: </label>
-      <br>
-  
-      <img *ngIf="!this.cambio" id="img" [src]="getSantizeUrl()"/>
-  </div>
-    
+    <div class="imagen">
+        <label for="imagen">Imagen: </label>
+        <br>
 
-  <div>
-    <label for="nombre">Nombre: </label>
-    <input type="text" class="form-control" id="nombre" [(ngModel)]="this.usuarioMostrar.nombre" >
-  </div>
-  <div>
-      <label for="username">Email: </label>
-      <input type="text" class="form-control" id="username" [(ngModel)]="this.usuarioMostrar.email" readonly>
+        <img *ngIf="!this.cambio" id="img" [src]="getSantizeUrl()"/>
+    </div>
 
+
+    <div>
+      <label for="nombre">Nombre: </label>
+      <input type="text" class="form-control" id="nombre" [(ngModel)]="item.nombre" >
     </div>
     <div>
-        <label for="edad">Edad: </label>
-        <input type="text" class="form-control" id="edad" [(ngModel)]="this.usuarioMostrar.edad">
+        <label for="username">Email: </label>
+        <input type="text" class="form-control" id="username" [(ngModel)]="item.email" readonly>
 
       </div>
       <div>
-          <label for="telefono">Teléfono:</label>
-          <input type="text" class="form-control" id="telefono" [(ngModel)]="this.usuarioMostrar.telefono">
-      </div>
+          <label for="edad">Edad: </label>
+          <input type="text" class="form-control" id="edad" [(ngModel)]="item.edad">
 
-      <div>
-          <label for="password">Contraseña:</label>
-          <input type="password" class="form-control" id="password" [(ngModel)]="this.usuarioMostrar.password">
-      </div>
-
-      
-
-
-      <div class="imagen">
-        <label class="image-upload-container btn btn-bwm">
-            <span>Seleccionar imagen</span>
-            <p></p>
-            <input type='file' (change)="onSelectFile($event)"  class="form-control" [ngClass]="{ 'is-invalid': submitted && f.foto.errors }">
-          </label>
-      </div>
-
-
-    <div *ngIf="this.sesionService.sesion == 'proveedor'">
-        <label for="paginaweb">Página web: </label>
-        <input type="text" class="form-control" id="paginaweb" [(ngModel)]="this.usuarioMostrar.paginaweb">
-
-    </div>
-
-    <div *ngIf="this.sesionService.sesion == 'proveedor'">
-        <label for="contacto">Contacto: </label>
-        <input type="text" class="form-control" id="contacto" [(ngModel)]="this.usuarioMostrar.contacto">
-      </div>
-
-      <div class="row">
-        <div class="col">
-            <button type="button" class="btn btn-success btn-block" (click)="actualizar()">
-                Guardar
-            </button>
         </div>
-        <div class="col">
-                <button type="button" class="btn btn-outline-danger btn-block" (click)="eliminar()">
-                Eliminar
-            </button>
+        <div>
+            <label for="telefono">Teléfono:</label>
+            <input type="text" class="form-control" id="telefono" [(ngModel)]="item.telefono">
         </div>
-    </div>
+
+        <div>
+            <label for="password">Contraseña:</label>
+            <input type="password" class="form-control" id="password" [(ngModel)]="item.password">
+        </div>
+
+
+
+
+        <div class="imagen">
+          <label class="image-upload-container btn btn-bwm">
+              <span>Seleccionar imagen</span>
+              <p></p>
+              <input type='file' (change)="onSelectFile($event)"  class="form-control" [ngClass]="{ 'is-invalid': submitted && f.foto.errors }">
+            </label>
+        </div>
+
+
+      <div *ngIf="this.sesionService.sesion == 'proveedor'">
+          <label for="paginaweb">Página web: </label>
+          <input type="text" class="form-control" id="paginaweb" [(ngModel)]="item.paginaweb">
+
+      </div>
+
+      <div *ngIf="this.sesionService.sesion == 'proveedor'">
+          <label for="contacto">Contacto: </label>
+          <input type="text" class="form-control" id="contacto" [(ngModel)]="item.contacto">
+        </div>
+
+        <div class="row">
+          <div class="col">
+              <button type="button" class="btn btn-success btn-block" (click)="actualizar()">
+                  Guardar
+              </button>
+          </div>
+          <div class="col">
+                  <button type="button" class="btn btn-outline-danger btn-block" (click)="eliminar()">
+                  Eliminar
+              </button>
+          </div>
+      </div>
 
 </div>
